# CaoZuoXiTongKeShe

./: CLAUDE.md  CMakeLists.txt
doc/: docx_extracted.txt  实验报告模板.doc
include/backend/: BackendEngine.h  UserState.h
include/core/: Config.h  Platform.h  Types.h
include/ipc/: PipeClient.h  PipeServer.h
include/memory/: MemoryBlock.h  MemoryManager.h
include/persist/: Serializer.h  StateFile.h
include/process/: PCB.h  ProcessManager.h
include/scheduler/: MLFQ.h  Scheduler.h
include/thread/: FileLock.h  Message.h  SharedQueue.h
include/ui/: CommandParser.h
include/user/: User.h  UserManager.h
src/: main.cpp
src/backend/: BackendEngine.cpp
src/core/: Platform.cpp
src/ipc/: PipeClient.cpp  PipeServer.cpp
src/memory/: MemoryManager.cpp
src/persist/: Serializer.cpp  StateFile.cpp
src/process/: ProcessManager.cpp
src/scheduler/: MLFQ.cpp  Scheduler.cpp
src/thread/: FileLock.cpp  SharedQueue.cpp
src/ui/: CommandParser.cpp
src/user/: UserManager.cpp
test/: test_commands.txt  test_load.txt  test_new_model.txt  test_save.txt
